samples/_failures_safe/1761202024_0822a9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_438ee246.c:146:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  146 | int matrix
      | ^~~
